# unitree_go2_ros2_demo

./: .gitignore  README.md  deepseek.md  dog_map.rviz  dog_map_simp.rviz  dog_slam_simp.rviz  metterport3d_debug.md  readme_lyf.md  setup.sh  setup_deskpc.sh  setup_laptop.sh  setup_local.sh  setup_pc2.sh
.cache/41/: cache.db
.cache/42/: cache.db
LLM/autogen/develop_new_project/: 2_demo_go2.py  autogen_tool_using.py  project_deve_and_idea.py
LLM/autogen/setup_autogen/: 1_installation.md  try_local_LLM.py  try_online_LLM.py
LLM/deepseek/: setup.py
LLM/deepseek/deepseek.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LLM/deepseek/deepseek_test/: test.py
coding/: check_system_resources.sh  tmp_code_dc90336f9b95595c71bb846c6eaed907.sh  查看 CPU 占用最多的进程
cyclonedds_ws/src/unitree/graph_msg/: CMakeLists.txt  package.xml
cyclonedds_ws/src/unitree/unitree_api/: CMakeLists.txt
cyclonedds_ws/src/unitree/unitree_interfaces/: CMakeLists.txt  package.xml
lyf_demo_python/: room.pgm  room.yaml
lyf_demo_python/odom_compare/: metadata.yaml
lyf_demo_python/odom_compare_2/: metadata.yaml  odom_compare_2_0.db3
lyf_demo_python/src/: conflict_test.py  testwebots.py  topic_list.txt
lyf_demo_python/src/common/common.egg-info/: SOURCES.txt
lyf_demo_python/src/common/go2_sport/: unitree_slam_api.py
lyf_demo_python/src/custom_interface/srv/: UnitreeSlam.srv
lyf_demo_python/src/go2_bringup/: DEBUG.MD  package.xml  setup.py
lyf_demo_python/src/go2_bringup/config/: explore.yaml  explore_params.yaml  mapper_params_online_async.yaml  nav2_params copy.yaml  nav2_params.yaml
lyf_demo_python/src/go2_bringup/go2_bringup/: astar.cpp  change_initialpose.py  check_opencv.py  debug.cpp  dwb_local_planner.cpp  explore.cpp  find_stairs.py  frame_id_modifier.py  go2_move.py  initialpose_publisher.py  modify.py  motion_to_odom_node.py  motion_to_tf.py  odom2tf.py  opencv_test.py  stair_detector.py  trajectory_visualizer.py  transfor_tare.py  video_stream.py  video_stream_node.py  wavefront_frontier.py
lyf_demo_python/src/go2_bringup/launch/: cloud_to_scan.launch.py  cloud_to_scan.py  cus_go2_bringup.launch.py  explore.launch.py  go2_bringup.launch.py  go2_m_explore.launch.py  go2_nav2_bringup.launch.py  go2_slam_bringup.launch.py  go2_slam_m-explore.launch.py  go2_slam_noshow.launch.py  go2_wave_explore.launch.py  navigation2.launch.py  slam.launch.py  test_explore.launch.py
lyf_demo_python/src/go2_bringup/map/: room.pgm  room.yaml
lyf_demo_python/src/go2_bringup/room/: b1-room.yaml  f12-room-2.pgm  f12-room-2.yaml
lyf_demo_python/src/go2_bringup/rviz/: dog_slam_simp.rviz  nav2_go2_view.rviz
lyf_demo_python/src/go2_bringup/world/: floor_nine.world  floor_test.world
lyf_demo_python/src/go2_description/: package.xml  setup.cfg  setup.py
lyf_demo_python/src/go2_description/launch/: display_robot.launch.py  go2.launch.py  go2_real.launch.py  go2_rviz.launch.py  load_urdf_into_gazebo.launch.py  mbot.launch.py
lyf_demo_python/src/go2_description/urdf/: go2_description.urdf  mbot_gazebo.xacro
lyf_demo_python/src/go2_description/xacro/: robot.xacro
lyf_demo_python/src/go2_llm/: package.xml  requirements.txt  setup.cfg  setup.py
lyf_demo_python/src/go2_llm/go2_llm/: 2_first_try.py
lyf_demo_python/src/go2_ros2_basic/: setup.cfg  setup.py
lyf_demo_python/src/go2_ros2_basic/go2_ros2_basic/: sport_demo.py
lyf_demo_python/src/go2_ros2_platform/: display_node.py  gait_RL_node.py  image_recog_DL.py  multi_nav_node.py  multi_slam_node.py  sense_node.py
lyf_demo_python/src/go2_ros2_slam/: package.xml  setup.cfg  setup.py
lyf_demo_python/src/go2_ros2_slam/config/: unitree_slam_params.yaml
lyf_demo_python/src/go2_ros2_slam/go2_ros2_slam/: go2_slam.py  go2_slam_test.py  unitree_slam.py
lyf_demo_python/src/go2_ros2_slam/launch/: cloud_to_scan.py  slam_launch.py
unitree_go2_ros2_function_pkg/src/: DEBUG.MD  README.MD  dependencies.repo  hesai_pcl_process copy.cpp  show.MD
unitree_go2_ros2_function_pkg/src/common/: setup.py
unitree_go2_ros2_function_pkg/src/common/common.egg-info/: PKG-INFO  (+3 more)
unitree_go2_ros2_function_pkg/src/custom_interface/: CMakeLists.txt  package.xml
unitree_go2_ros2_function_pkg/src/go2_brain_interface/: setup.py
unitree_go2_ros2_function_pkg/src/go2_bringup/: DEBUG.MD  setup.py
unitree_go2_ros2_function_pkg/src/go2_camera_processing/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/go2_cmd/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/go2_demo_show/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/go2_explore_algorithm/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/go2_lidar_processing/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/go2_nav/: package.xml  setup.py
unitree_go2_ros2_function_pkg/src/go2_ros2_basic/: package.xml  setup.py
unitree_go2_ros2_function_pkg/src/go2_ros2_basic/go2_ros2_basic/: sport_demo.py
unitree_go2_ros2_function_pkg/src/go2_sim/: package.xml  setup.py
unitree_go2_ros2_function_pkg/src/go2_slam/point_lio_unilidar/: CMakeLists.txt
unitree_go2_ros2_function_pkg/src/go2_slam/point_lio_unilidar/config/: utlidar.yaml
unitree_go2_ros2_function_pkg/src/go2_slam/point_lio_unilidar/launch/: mapping_utlidar.launch.py
unitree_go2_ros2_function_pkg/src/go2_slam/point_lio_unilidar/rviz_cfg/: brain_interface_traj.rviz  loam_livox.rviz  point_lio_map.rviz
unitree_go2_ros2_function_pkg/src/go2_slam_algorithm/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/go2_vla_method/: package.xml  setup.cfg  setup.py
unitree_go2_ros2_function_pkg/src/pcl_process/: CMakeLists.txt  package.xml
unitree_go2_ros2_function_pkg/src/pcl_process/src/: hesai_pcl_process.cpp
unitree_go2_ros2_function_pkg/src/pcl_process_py/: package.xml  setup.py
unitree_go2_ros2_function_pkg/src/utilities/pcl_process/: CMakeLists.txt  package.xml
unitree_go2_ros2_function_pkg/src/utilities/pcl_process/include/: pcl_main.h
unitree_go2_ros2_function_pkg/src/utilities/pcl_process/src/: hesai_pcl_process.cpp
(+148 files in other folders)
