<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_ros2_slam</name>
  <version>0.0.0</version>
  <description>go2 slam algorithm package in ROS2 by python</description>
  <maintainer email="luoyifan902008@126.com">flyivan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>  
 


  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>unitree_interfaces</depend>
  <depend>custom_interface</depend> 



  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>go2_sport</depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
